--- a/WebContent/single-star.html
+++ b/WebContent/single-star.html
@@ -1,14 +1,7 @@
-<!-- This example is following frontend and backend separation.
-
-    This .html performs two steps:
-    1. Create a html template skeleton, with all the elements defined (some left empty) and named with ids.
-    2. Load single-star.js to populate the data into empty elements.
-    -->
-
 <!doctype html>
 <html lang="en">
 <head>
-    <style >
+    <style>
         body {
             background-color: lightblue;
             font-family: Verdana;
@@ -18,61 +11,84 @@
             text-align: center;
         }
         p {
-            font-family: verdana;
+            font-family: Verdana;
         }
         #movie_table th, #movie_table td {
             font-weight: normal;
         }
     </style>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
     <title>Single Star</title>
 </head>
+
 <body style="background-color:lightsteelblue;">
-<div style="width:90%; margin: 0 auto; font-family: verdana;">
 
-<a href="index.html">← Back to Movie List</a>
-<h1>Single Star Page</h1>
+<div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
+    <span id="user-info">Loading user…</span>
 
-<!-- H3 body is left empty here, will be populated with the data retrieved with single-star.js -->
-<!-- single-star.js will find this html element by it's id "star_info" -->
-<h3 id="star_info"></h3>
+    <button id="checkout-button">Checkout</button>
+    <button id="logout-button">Logout</button>
+
+</div>
+
+<div style="width:90%; margin: 0 auto; font-family: Verdana;">
+    <button id="go-back-button" class="btn btn-primary mb-3">← Back to Browsing</button>
+
+    <h1>Single Star Page</h1>
+
+    <h3 id="star_info"></h3>
+
     <div style="display: flex; justify-content: center; overflow-x: auto;">
-<table id=movie_table class="table table-striped" style="text-align: center; border: 1px solid white;">
-    <thead>
-    <tr>
-        <th style="width:40%;font-weight: bold;  padding-top:20px;  padding-bottom:20px;">Name</th>
-        <th style="width:20%;font-weight: bold;  padding-top:20px;  padding-bottom:20px;">Year of Birth</th>
-        <th style="width:40%;font-weight: bold;  padding-top:20px;  padding-bottom:20px;">Movies</th>
-        <th style="width:25%;font-weight: bold;  padding-top:20px;  padding-bottom:20px;">
-    </tr>
-    </thead>
-
-    <!-- Table body is left empty here, will be populated with the data retrieved with single-star.js -->
-    <!-- single-star.js will find this html element by it's id "movie_table_body" -->
-    <tbody id=movie_table_body></tbody>
-</table>
+        <table id="movie_table" class="table table-striped" style="text-align: center; border: 1px solid white;">
+            <thead>
+            <tr>
+                <th style="width:40%; font-weight: bold; padding-top:20px; padding-bottom:20px;">Name</th>
+                <th style="width:20%; font-weight: bold; padding-top:20px; padding-bottom:20px;">Year of Birth</th>
+                <th style="width:40%; font-weight: bold; padding-top:20px; padding-bottom:20px;">Movies</th>
+            </tr>
+            </thead>
+            <tbody id="movie_table_body"></tbody>
+        </table>
     </div>
+</div>
 
-<!-- Load jQuery and Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-<!-- Load our own JS file -->
-<!-- The path is relative to single-star.html, since these two files are in the same directory -->
-<!-- Note the url does not contain a "/" in the beginning, which means the url is relative to current path
-     otherwise the url is relative to the root path-->
+<script>
+    $(document).ready(function() {
+        $.ajax({
+            url: "api/index",
+            method: "GET",
+            success: function(data) {
+                console.log("User logged in:", data);
+                $("#user-info").text("Signed in as: " + data.username);
+            },
+            error: function() {
+                window.location.replace("login.html");
+            }
+        });
+
+        $("#go-back-button").click(function() {
+            const origin = sessionStorage.getItem("origin_page");
+            if (origin) {
+                window.location.href = origin;
+            } else {
+                window.location.href = "index.html"; // fallback
+            }
+        });
+
+        $("#logout-button").click(() => window.location.replace("logout"));
+    });
+</script>
+
 <script src="single-star.js"></script>
-</div>
+
 </body>
-
-
 </html>
